// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourceListFilters Adds selected values to appropriate fields 1`] = `
<form>
  <h3>
    Filter!
  </h3>
  <label
    htmlFor="searchTerm"
  >
    Name
    <input
      aria-label="Name"
      id="searchTerm"
      name="searchTerm"
      onChange={[Function]}
      placeholder="search resources"
      type="text"
      value="Code"
    />
  </label>
  <label
    htmlFor="resourceSkillLevel"
  >
    Skill Level
  </label>
  <select
    id="resourceSkillLevel"
    name="resourceSkillLevel"
    onChange={[Function]}
    value="Beginner"
  >
    <option
      value=""
    >
      All
    </option>
    <option
      value="Beginner"
    >
      Beginner
    </option>
    <option
      value="Moderate"
    >
      Moderate
    </option>
    <option
      value="Advanced"
    >
      Advanced
    </option>
  </select>
  <label
    htmlFor="resourceFormat"
  >
    Format
  </label>
  <select
    id="resourceFormat"
    name="resourceFormat"
    onChange={[Function]}
    value="Article"
  >
    <option
      value=""
    >
      All
    </option>
    <option
      value="Article"
    >
      Article
    </option>
    <option
      value="Interactive"
    >
      Interactive
    </option>
    <option
      value="Tutorial"
    >
      Tutorial
    </option>
    <option
      value="Video"
    >
      Video
    </option>
  </select>
  <label
    htmlFor="resourceFocus"
  >
    Focus
  </label>
  <select
    id="resourceFocus"
    name="resourceFocus"
    onChange={[Function]}
    value="Front-end"
  >
    <option
      value=""
    >
      All
    </option>
    <option
      value="Front-end"
    >
      Front-end
    </option>
    <option
      value="Multiple"
    >
      Multiple
    </option>
    <option
      value="Algorithms"
    >
      Algorithms
    </option>
  </select>
</form>
`;

exports[`ResourceListFilters renders correctly 1`] = `
<form>
  <h3>
    Filter!
  </h3>
  <label
    htmlFor="searchTerm"
  >
    Name
    <input
      aria-label="Name"
      id="searchTerm"
      name="searchTerm"
      onChange={[Function]}
      placeholder="search resources"
      type="text"
      value=""
    />
  </label>
  <label
    htmlFor="resourceSkillLevel"
  >
    Skill Level
  </label>
  <select
    id="resourceSkillLevel"
    name="resourceSkillLevel"
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      All
    </option>
    <option
      value="Beginner"
    >
      Beginner
    </option>
    <option
      value="Moderate"
    >
      Moderate
    </option>
    <option
      value="Advanced"
    >
      Advanced
    </option>
  </select>
  <label
    htmlFor="resourceFormat"
  >
    Format
  </label>
  <select
    id="resourceFormat"
    name="resourceFormat"
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      All
    </option>
    <option
      value="Article"
    >
      Article
    </option>
    <option
      value="Interactive"
    >
      Interactive
    </option>
    <option
      value="Tutorial"
    >
      Tutorial
    </option>
    <option
      value="Video"
    >
      Video
    </option>
  </select>
  <label
    htmlFor="resourceFocus"
  >
    Focus
  </label>
  <select
    id="resourceFocus"
    name="resourceFocus"
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      All
    </option>
    <option
      value="Front-end"
    >
      Front-end
    </option>
    <option
      value="Multiple"
    >
      Multiple
    </option>
    <option
      value="Algorithms"
    >
      Algorithms
    </option>
  </select>
</form>
`;
